--- a/doc/ch1-5.md
+++ b/doc/ch1-5.md
@@ -80,7 +80,7 @@
 
 - 전체 7부로 구성 1,2부(1장~5장)는 기본지식 함양이며 3부 이부터는 알고리즘 설계 기법과 자료구조 등
 - 책에 있는 모든 연습문제는 [algospot](http://algospot.com)에서 실제로 풀어볼 수 있으며 채점받을 수 있음
-  [사진 1]
+![](images/1.jpg)
 
 #### 필요한 배경지식
 
@@ -194,7 +194,7 @@
    - 연습문제) Quantization 8장, 두니발 박사의 탈옥 8장, 실험 데이터 복구하기 9장, 출전순서 정하기 10장, 마법의 약 14장, 함정설치 32장
 4. 문제를 단순화할 수 없을까?
    - 연습문제) 비대칭 타일링 8장, 드래곤커브 9장, 도시락 데우기 10장, 어린이날 29장, 근거리 네트워크 31장
-     ![](https://github.com/ant35rookie/share/blob/master/docs/ch1~3/20190414_223750_HDR.jpg)
+     ![](images/2.jpg)
 5. 그림으로 그려볼 수 있을까?
    - 2차원평면, 직선에 그려보는 것이다, 항상 성공할 수는 없지만 결정적인 방법을 찾아낼 수도 있다
    - 연습문제) 문자열 함치기 10장, 너드인가 너드가 아닌가 15장, 너드인가 너드가 아닌가 2 22장
@@ -202,17 +202,17 @@
    - 연습문제) 수강철회 12장
 7. 문제를 분해할 수 있을까?
    - 연습문제) 위상정렬 28장
-     ![](https://github.com/ant35rookie/share/blob/master/docs/ch1~3/20190414_224009.jpg)
+     ![](images/3.jpg)
 8. 뒤에서부터 생각해서 문제를 풀 수 있을까?
    - 연습문제) 삽입 정렬 뒤집기 22장, 감시카메라 설치 28장, Sorting Game 29장
 9. 순서를 강제화 할 수 있을까?
    - 연습문제) 게임판 덮기 6장, 폴리오미노 8장, 웨브바짐 9장
-     ![](https://github.com/ant35rookie/share/blob/master/docs/ch1~3/20190414_223810(1).jpg)
+     ![](images/4.jpg)
 10. 특정 형태의 답만 고려할 수 있을까? (정규화)
 
 - 연습문제) 소풍 6장, 단어 제한 끝말잇기 28장
-  ![](https://github.com/ant35rookie/share/blob/master/docs/ch1~3/20190414_223818.jpg)
-  ![](https://github.com/ant35rookie/share/blob/master/docs/ch1~3/20190414_223830.jpg)
+  ![](images/5.jpg)
+  ![](images/6.jpg)
 
 # 3장. 코딩과 디버깅에 관하여
 
