--- a/doc/ch1-5.md
+++ b/doc/ch1-5.md
@@ -187,7 +187,6 @@
    - 이를 위해서는 문제가 어떤 유형이고 이를 위한 해결법이 무엇인지를 체계적으로 공부해야 한다 이 책은 이러한 방법을 도와준다
    - 이렇게 연상하는 것이다 : 문제유형-경우의 수, 해결법-동적계획법 / 문제유형-두 도시를 잇는 가장빠른 기차, 해결법-최단경로 알고리즘
    - 연습문제) 합친 LIS 8장, 신호라우팅 30장, 음주운전단속 30장, 선거 공약 30장
-
 2. 단순한 방법에서 시작할 수 있을까?
    - 연습문제) 쿼드트리 뒤집기 7장
 3. 손으로 풀어보기 (교재의 제목 오타인 것 같음)
@@ -209,115 +208,143 @@
    - 연습문제) 게임판 덮기 6장, 폴리오미노 8장, 웨브바짐 9장
      ![](images/4.jpg)
 10. 특정 형태의 답만 고려할 수 있을까? (정규화)
-
-- 연습문제) 소풍 6장, 단어 제한 끝말잇기 28장
-  ![](images/5.jpg)
-  ![](images/6.jpg)
+    - 연습문제) 소풍 6장, 단어 제한 끝말잇기 28장
+      ![](images/5.jpg)
+      ![](images/6.jpg)
 
 # 3장. 코딩과 디버깅에 관하여
 
 ## 3.1 도입: 코딩의 중요성을 간과하지 말라
 
-- 2장에서 문제해결을 전략을 주로 다뤘으며 그 중에서 5단계: 전략수행(코딩) 은 역시 중요하다
-- 문제해결만 된다면 스파게티 코드를 작성해도 되는 것이 아니다
-- 코드가 간결하고 이해하기 쉬워야만 문제해결 과정에서 디버깅이 쉽고 실수를 줄일 수 있다
+- 문제해결 과정 5단계: 전략수행(코딩)은 역시 가장 중요하다.
+- 프로그래밍 대회라고 해서 동작만 잘 된다고 능사는 아니다. 
+- 왜냐하면 코드가 간결하고 이해하기 쉬워야만 디버깅이 쉽고 실수를 줄일 수 있다.
 
 ## 3.2 좋은 코드를 짜기 위한 원칙
 
-- 좋은 코딩습관을 위한 규칙들은 아래와 같다
+- 프로그래밍 대회를 위한 좋은 코딩습관 7가지
 
-  - 규칙1: 간결한 코드를 작성하기
-  - 규칙2: 적극적으로 코드 재사용하기
-  - 규칙3: 표준 라이브러리 공부하기
-  - 규칙4: 항상 같은 형태로 프로그램을 작성하기
-  - 규칙5: 일관적이고 명로한 명명법 사용하기
-  - 규칙6: 모든 자료를 정규화해서 저장하기
-  - 규칙7: 코드와 데이터를 분리하기
+  1. 간결한 코드를 작성하기
 
-- 각각에 대한 상세설명
+     - 프로그래밍 대회에서는 전역변수와 매크로가 유용하다.
 
-  - 규칙1: 간결한 코드를 작성하기
+     - 왜냐하면 코드의 길이가 비교적 짧고, 실수를 줄이는 것이 더 중요하기 때문이다.
 
-    - 어떤 프로그래밍을 하더라도 주요한 원칙 중 하나이다
-    - 프로그래밍 대회에서의 특징이라면 전역변수와 매크로를 사용하는 것도 어느정도 필요하다는 것이다
-    - 왜냐하면 대부분의 경우, 코드의 길이가 길지 않고, 실수를 줄이는 것이 더 중요하기 때문이다
+     - 예를 들어 아래와 같이 for 문에 매크로를 사용하면 실수를 피할 수 있다. (C++ 11 부터는 굳이 필요 없다.)
 
-  - 규칙2: 적극적으로 코드 재사용하기
+       ```c++
+       #define FOR(i,n) for(int i = 0; i < (n); ++i)
+       bool hasDuplicate(const vector<int>& array) {
+       	FOR(i,array.size())
+       		FOR(j,i)
+               	if(array[i] == array[j])
+                       return true;
+           return false;
+       }
+       ```
 
-    - 이것도 어떤 프로그래밍을 하더라도 주요한 원칙 중 하나이다
-    - 프로그래밍 대회에서의 특징이라면 SRP(Single Response Principle)이 적용되지 않는 경우가 많다
-    - 실무에서는 한개의 클래스 또는 함수가 하나의 역할만 하도록 설계,구현하는 것이 일반적이지만,
-    - 프로그래밍 대회에서는 그렇게 하면 시간제한도 있고, 재사용하기 어려운 경우가 많기 때문에 SRP는 일반적이지 않다
+     - 실수가 있는 코드
 
-  - 규칙3: 표준 라이브러리 공부하기
+       ```c++
+       for(int i = 0; i < array.size(); ++i)
+       	for(int j = 0; j < i; ++i)	// ++j 여야 함
+       ```
 
-    - 학교에서 숙제를 하듯이, 이미 구현된 알고리즘, 자료구조를 직접 구현하는 것은 낭비이다
-    - 문자열, 동적배열, 스택, 큐, 리스트, 사전 등의 자료구조와 정령 등의 표준알고리즘, 즉 C++ STL 사용법을 반드시 알아두어야 한다
+  2. 적극적으로 코드 재사용하기
 
-  - 규칙4: 항상 같은 형태로 프로그램을 작성하기
+     - 3번 이상 사용되면 함수나 클래스로 분리하는 습관을 갖자.
+     - 코드가 간결해지고 디버깅하기 쉬워진다.
+     - 하나의 클래스나 함수가 여러가지 일을 해도 된다.
+       실무에서처럼 SRP(Single Responsibility Principle)는 지키지 않아도 된다.
 
-    - 프로그래밍 습관이 들쭉날쭉하면 실수하기 쉽고 디버깅에 긴 시간을 들이게 된다
-    - 예를 들어, while/do-while 중 어떤것을 사용할지, 2차원 배열을 크기를 가로/세로 혹은 세로/가로 순서로 전달하는지 등은 일관성이 있어야 한다
+  3. 표준 라이브러리 공부하기
 
-  - 규칙5: 일관적이고 명료한 명명법 사용하기
+     - 표준 라이브러리에서 제공하는 알고리즘, 자료구조는 직접 구현하지 말자.
+     - 문자열, 동적배열, 스택, 큐, 리스트, 사전 등의 자료구조와 정렬 등의 표준알고리즘을 적극 사용하자.
 
-    - 프로그래밍 대회의 경우, 실무적인 코딩과 다른 부분이 많지만 이것은 동일하게 적용된다
-    - 예를 들어, 아래와 같은 함수는 무언가를 평가하는 것인데 어느경우에 참인지 알 수가 없다
+  4. 항상 같은 형태로 프로그램을 작성하기
 
-    ```
-    bool judge(int y, int x, int cy, int cx, int cr);
-    ```
+     - 자주 작성하는 코드나 알고리즘은 일관성 있게 구현해야 한다.
+     - 예를 들어
+       - while / do-while 중 어떤것을 사용할지
+       - 2차원 배열을 크기를 가로/세로 or 세로/가로 중 어떤 순서로 전달할지
 
-    - 아래와 같이 명명해야 실수하지 않는다
+  5. 일관적이고 명료한 명명법 사용하기
 
-    ```
-    bool isInsideCircle(int y, int x, int cy, int cx, int cr)
-    ```
+     - 이 부분은 실무에서 적용되는 규칙이 그대로 적용된다.
 
-  - 규칙6: 모든 자료를 정규화해서 저장하기
+     - 예를 들어
 
-    - 정규화는 어떤 자료를 입력받자마자 바로 수행해야 한다
-    - 여기서 정규화라는 것은 아래와 같은 경우를 의미한다
-    - 예1) 9/6 과 3/2 는 같은 값이므로 1가지로 통일하자
-    - 예2) 2차원 평면에서 두 점의 각도를 구한다고 하면 -30도, 330도, 690도는 같은 값이므로 1가지로 통일하자
-    - 예3) 문자는 UTF-8, UTF-16인지 확실히 변환하자
-    - 예4) 시간표현은 가지각색이다, UTC를 이용하는 것이 가장 좋다
+       - 변수명을 모호하게 만들지 말자.
 
-  - 규칙7: 코드와 데이터를 분리하기
+         ```c++
+         int a[30][30], i, j, p[100], k=0, l=-1;
+         ```
 
-    - 예를 들어 아래와 같은 경우이다, 코드속에 데이터가 같이 있다
+       - 함수명도 모호하게 만들지 말고, 무엇을 하는 함수인지 명료하게 작성하자.
 
-    ```
-    string getMonthName(int month) {
-     if(month == 1) return "January";
-     if(month == 2) return "Feburary";
-     ...
-     return "December";
-    }
-    ```
+         ```c++
+         bool judge(int y, int x, int cy, int cx, int cr);
+         ```
 
-    - 이 때에는 자료를 분리해서 사용한다, 그래야 실수가 줄어든다
+         ```c++
+         bool isInsideCircle(int y, int x, int cy, int cx, int cr)
+         ```
 
-    ```
-    const string monthName[] = {"January", "Feburary", ..., "December"};
-    ```
+  6. 모든 자료를 정규화해서 저장하기
+
+     - 정규화는 어떤 자료를 입력받자마자 바로 수행해야 한다
+     - 예를 들어
+       - 유리수 :  9/6 = 3/2는 같으므로 기약분수로 표현
+       - 2차원 평면에서 각도 : -30도, 330도, 690도는 같은 값이므로 1가지로 통일
+       - 문자 : UTF-8, UTF-16인지 입력받자마자 바로 변환
+       - 시간 : UTC로 통일
+
+  7. 코드와 데이터를 분리하기
+
+     - 예를 들어
+
+       - 아래 코드에서 각 달의 문자열 데이터는 분리해야 한다.
+
+         ```c++
+         string getMonthName(int month) {
+          if(month == 1) return "January";
+          if(month == 2) return "Feburary";
+          ...
+          return "December";
+         }
+         ```
+
+         ```c++
+         const string monthName[] = {"January", "Feburary", ..., "December"};
+         ```
+
+       - 체스판 같은 게임보드에서 상대좌표
+
+         ```c++
+         const int knightDx[8] = { 2,  2, -2, -2, 1, 1, -1, -1 };
+         const int knightDy[8] = { 1, -1,  1, -1, 2, 2,  2, -2 };
+         ```
 
 ## 3.3 자주하는 실수
 
-- 산술 오버플로우
+자주하는 실수 12가지
 
-  - 매우 중요해서 3.5에서 따로 다루겠음
+1. 산술 오버플로우
 
-- 배열 범위 밖 원소에 접근
+  - 중요해서 3.5에서 따로 다룸
+
+2. 배열 범위 밖 원소에 접근
 
   - 배열의 size와 index를 꼭 구별해서 사용하자
+
   - 아래와 같이 선언해서 array[10] 에 접근하면 컴파일 에러도 안나기 때문에 디버깅하기 어려운 문제가 런타임에 발생한다
 
-  ```
-  int array[10], t;
-  ```
+    ```c++
+    int array[10], t;
+    ```
 
-- 일관되지 않은 범위 표현 방식 사용하기
+3. 일관되지 않은 범위 표현 방식 사용하기
 
   - 열린구간
     - (2, 10) : 3~9
@@ -330,16 +357,16 @@
     - list.end() : null 이다, list.end()-1 을 사용해야 null에 접근하지 않는다
   - 이러한 법칙에 일관성이 없으면 어떤 함수를 호출할때 전달하는 값의 범위와 함수내부에서 사용하는 범위가 달라질 수 있기 때문에 일관성을 갖자
 
-- Off-by-one
+4. Off-by-one 오류
 
   - 어떤 연산에서 1개 차이로 오류가 발생하는 경우를 뜻한다
   - 예를 들어 100미터 거리에 10미터마다 기둥을 세운다고 할 때 기둥의 개수는 11개이다
   - 즉, A[0] ~ A[10] 까지의 평균을 구할때는 아래와 같다
     - A[0] + A[10] / 11 (end - begin + 1)
-  - 또한, A[1] ~ A[1] 까지의 평균은 아래와 같다
-    - A[1] / 1 (end - begin + 1)
+    - 또한, A[1] ~ A[1] 까지의 평균은 아래와 같다
+  - A[1] / 1 (end - begin + 1)
 
-- 컴파일러가 잡아주지 못하는 상수 오타
+5. 컴파일러가 잡아주지 못하는 상수 오타
 
   - 정말 단순한 실수가 오답으로 판정되는 경우가 즐비하다
   - 실수를 줄이는 것이 중요하다
@@ -347,131 +374,145 @@
   - 예2) 1000000000 <- 0의 개수를 틀리는 경우
   - 예3) C++에서 64비트는 상수 뒤에 LL을 붙여야 하는데 붙이지 않은 경우
 
-- 스택오버플로우
+6. 스택 오버플로우
 
   - 프로그래밍 대회에서는 재귀함수도 자주 사용하기 때문에 유의할 필요가 있다
   - C++의 경우, 배열이나 클래스를 지역변수로 선언하면 스택을 사용한다
   - 따라서 기본적으로 힙을 사용하게 되는 STL컨테이너를 사용하는 것이 더 좋은 방법이다
 
-- 다차원 배열 인덱스 순서 바꿔쓰기
+7. 다차원 배열 인덱스 순서 바꿔쓰기
 
   - 실무에서는 2차원 배열보다 차수가 큰 배열을 사용하는 경우가 드물지만 프로그래밍 대회에서는 이런 상황이 종종 발생한다
   - 이것을 헷갈리지 말아야 하며 8장의 메모이제이션 부분을 설명할때 상세히 배운다
 
-- 잘못된 비교함수 작성
+8. 잘못된 비교 함수 작성
 
   - C++ < 연산자의 성질
+
     - a<a는 항상 거짓입니다, 이 성질을 비반사성이라고 합니다
     - a<b가 참이면 b<a는 거짓입니다, 이 성질을 비대칭성이라고 합니다
     - a<b가 참이고 b<c가 참이면 a<c 입니다, 이 성질을 전이성이라고 합니다
     - a<b와 b<a가 모두 거짓이면 a와b는 같은 값으로 간주합니다, a와b가 같고, b와c가 같다면 a와c도 같아야 합니다
       이 성질을 상등관계의 전이성이라고 합니다
+
   - 위의 정보를 참고하여 아래와 같이 집합 비교함수를 overloading 해서 C++ 표준 정렬함수(sort)에 전달하면 결과를 예측할 수 없습니다
 
-  ```
-  // 진부분집합을 판정하는 함수
-  bool isProperSubset(const IntegerSet& a, const IntegerSet& b);
-  
-  bool operater<(const IntegerSet& a, const IntegerSet& b)
-  {
-    if(isProperSubset(a,b))
-      return true;
-    if(isProperSubset(b,a))
-      return false;
-      
-    return false;
-  }
-  ```
-
-  - 이 때, 아래와 같은 3가지 집합을 정렬함수에 전달하면 위의 규칙에 혼란이 온다
-  - {1} < {2} < {2,3} 
-    - 먼저, isProperSubset 함수는 {2} < {2,3} 에 대해 true 를 반환하는데 이와 다른 결과도 아래처럼 생성된다
-    - C++ < 연산자 "규칙4"에 의해 아래 2가지가 성립된다
-      - {1}<{2} : 거짓 / {2}<{1} : 거짓이므로 {1} == {2}
-      - {1}<{2,3} : 거짓 / {2,3}<{1} : 거짓이므로 {1} == {2,3}
-      - 따라서, {1} == {2} == {2,3} 가 되고 {2} < {2,3} 과 충돌이 남
-  - 그러므로 아래와 같이 구현해야 한다
-
-  ```
-  bool operator<(const IntegerSet& a, const IntegerSet& b)
-  {
-    if(a.size() != b.size()) 
-      return a.size() < b.size();
+    ```c++
+    // 진부분집합을 판정하는 함수
+    bool isProperSubset(const IntegerSet& a, const IntegerSet& b);
     
-    return lexicographical_compare(a.begin(), a.end(), b.begin(), b.end());
-  }
-  ```
-
-- 최대,최소 예외 잘못 다루기
-
-  - 최대,최소값(즉, 경계값)에 대한 오류만 확인해도 많은 문제를 사전에 예방할 수 있습니다
-  - 예를 들어, 아래코드는 소수를 구별하는 코드인데 최소값 문제가 있습니다
-
-  ```
-  bool isPrime(int n)
-  {
-    if(n % 2 == 0)
-      return false;
-    
-    for(int i =2; i<n; ++i)
-      if(n % i == 0)
+    bool operater<(const IntegerSet& a, const IntegerSet& b)
+    {
+      if(isProperSubset(a,b))
+        return true;
+      if(isProperSubset(b,a))
         return false;
         
-    return true;
-  }
-  ```
+      return false;
+    }
+    ```
 
-  - 문제점
-    - 2는 짝수이지만 소수이며
-    - 1은 소수가 아님에도 true를 리턴
+  - 이 때, 아래와 같은 3가지 집합을 정렬함수에 전달하면 위의 규칙에 혼란이 온다
 
-- 연산자 우선순위 잘못 쓰기
+    - {1} < {2} < {2,3} 
+    - 먼저, isProperSubset 함수는 {2} < {2,3} 에 대해 true 를 반환하는데 이와 다른 결과도 아래처럼 생성된다
+    - C++ < 연산자 "규칙4"에 의해 아래 2가지가 성립된다
+    - {1}<{2} : 거짓 / {2}<{1} : 거짓이므로 {1} == {2}
+    - {1}<{2,3} : 거짓 / {2,3}<{1} : 거짓이므로 {1} == {2,3}
+    - 따라서, {1} == {2} == {2,3} 가 되고 {2} < {2,3} 과 충돌이 남
 
-  - if (b & 1 == 0) 은 항상 거짓임
-  - if ((b & 1) == 0) 과 같이 우선순위가 확실하지 않을때는 항상 괄호를 써줘야 함
+  - 그러므로 아래와 같이 구현해야 한다
 
-- 너무 느린 입출력 방식 선택
+    ```c++
+    bool operator<(const IntegerSet& a, const IntegerSet& b)
+    {
+      if(a.size() != b.size()) 
+        return a.size() < b.size();
+      
+      return lexicographical_compare(a.begin(), a.end(), b.begin(), b.end());
+    }
+    ```
 
-  - 프로그래밍 대회에서는 입력자료가 10000개~ 도 넘어가는 경우가 더러 있음
-  - 이럴 때에 시간초과로 오답처리 되는 경우도 있음
-  - C++ 에서 지원하는 입력함수 gets() , cin 중 gets() 가 성능면에서 훨씬 좋음
-  - cin을 사용하기 전에 동기화를 끄는 방법도 있음 : cin.sync_with_stdio(false);
+9. 최소, 최대 예외 잘못 다루기
 
-- 변수 초기화 문제
+   - 최대,최소값(즉, 경계값)에 대한 오류만 확인해도 많은 문제를 사전에 예방할 수 있습니다
 
-  - 많은 프로그래밍 대회에서는 여러벌의 데이터를 주고 반복해서 답을 처리하는 경우가 많음
-  - 1벌의 데이터를 처리하고 나서는 꼭 초기화를 해줘야 함
-  - 초기화를 항상 하는 것이 가장 좋은 방법이며, 아래와 같은 방법으로 테스트하는 것도 도움이 됨
-  - 입력데이터를 복사해서 2배로 늘림 (작은 데이터처리 후에 큰 데이터 처리할 때 문제가 생기는 경우 및 반대의 경우를 걸러줌)
+   - 예를 들어, 아래코드는 소수를 구별하는 코드인데 최소값 문제가 있습니다
 
-  ```
-  2
-  1234
-  321
-  ```
+     ```c++
+     bool isPrime(int n)
+     {
+       if(n % 2 == 0)
+         return false;
+       
+       for(int i =2; i<n; ++i)
+         if(n % i == 0)
+           return false;
+           
+       return true;
+     }
+     ```
 
-  ```
-  4
-  1234
-  321
-  1234
-  321
-  ```
+   - 문제점
+
+     - 2는 짝수이지만 소수이며
+     - 1은 소수가 아님에도 true를 리턴
+
+10. 연산자 우선순위 잘못 쓰기
+
+    - if (b & 1 == 0) 은 항상 거짓임
+    - if ((b & 1) == 0) 과 같이 우선순위가 확실하지 않을때는 항상 괄호를 써줘야 함
+
+11. 너무 느린 입출력 방식 선택
+
+    - 프로그래밍 대회에서는 입력자료가 10000개~ 도 넘어가는 경우가 더러 있음
+    - 이럴 때에 시간초과로 오답처리 되는 경우도 있음
+    - C++ 에서 지원하는 입력함수 gets() , cin 중 gets() 가 성능면에서 훨씬 좋음
+    - cin을 사용하기 전에 동기화를 끄는 방법도 있음 : cin.sync_with_stdio(false);
+
+12. 변수 초기화 문제
+
+    - 많은 프로그래밍 대회에서는 여러벌의 데이터를 주고 반복해서 답을 처리하는 경우가 많음
+
+    - 1벌의 데이터를 처리하고 나서는 꼭 초기화를 해줘야 함
+
+    - 초기화를 항상 하는 것이 가장 좋은 방법이며, 아래와 같은 방법으로 테스트하는 것도 도움이 됨
+
+    - 입력데이터를 복사해서 2배로 늘림 (작은 데이터처리 후에 큰 데이터 처리할 때 문제가 생기는 경우 및 반대의 경우를 걸러줌)
+
+      ```c++
+      2
+      1234
+      321
+      ```
+
+      ```c++
+      4
+      1234
+      321
+      1234
+      321
+      ```
 
 ## 3.4 디버깅과 테스팅
 
-- 디버깅 툴은 매우 유용한 도구이지만, 프로그래밍 대회에서는 아래와 같은 이유로 눈으로 디버깅하는 경우가 많음
+#### 디버깅에 관하여
+
+- 직접 눈으로 디버깅하는 연습을 해야 한다.
   - 소스코드가 길지 않아서 눈이 더 빠름
-  - 재귀호출이나 중복반복문은 도구가 오히려 어려울 수 있음
+  - 재귀호출이나 중복반복문은 디버깅 도구를 사용하면 오히려 어려울 수 있음
   - ACM-ICPC 같은 대회는 3명이 1개의 PC를 쓰기 때문에 애초에 불가능함
-- 따라서 도구없이 디버깅하는 연습이 필요하며 이러한 방법은 실제로 버그없이 구현하는데 도움을 줌
-  - 오동작하는 경우를 만들어서 실행해보기
+- 디버깅 도구 대신에 아래와 같은 습관을 들이면 좋다.
+  - 입력이 크면 디버깅이 어려우므로 오동작을 일으키는 간단한 입력을 찾기
   - assert문 사용하기
   - 계산과정의 중간결과를 출력하기
-- 위의 방법외에 런타임 에러 등으로 프로그램이 죽을때는 디버거를 사용하는 것이 더 좋다
-- 코딩을 진행하면서 주어진 답안을 정확히 출력하는 것도 좋지만 예외 상황을 만들어서 계속해서 테스팅 하는 것이 좋다
-  - 내 코드를 테스트하는 코드를 만들어 보는 것이다, 스캐폴딩이라고도 함
-  - (이런 상황이 많지 않지만) 만약 정렬알고리즘을 구현한다면, STL표준 함수인 sort()와 비교해 보는 것도 방법이다
+- 물론, 런타임 에러 등으로 프로그램이 죽을때는 디버거를 사용하는 것이 더 좋다.
+
+#### 테스트에 관하여
+
+- 시간이 된다면 테스트 케이스는 최대한 많이 돌려보는게 좋다.
+- 테스트코드를 자동화하는 것도 하나의 방법이다. (스캐폴딩이라고도 함)
+- (이런 상황이 많지 않지만) 만약 정렬알고리즘을 구현한다면, STL표준 함수인 sort()와 비교해 보는 것도 방법이다.
 
 ## 3.5 변수 범위의 이해
 
