--- a/doc/ch1-5.md
+++ b/doc/ch1-5.md
@@ -1,18 +1,18 @@
 # 개관
 
-- 학교에서는 이론을 위주로 배운다.
-- 소프트웨어 개발자로 일하면서 코드 한 줄 못 짜는 사람이 많다.
-- 저자가 프로그래밍 대회를 통해 느꼈던 즐거움을 공유하려 한다.
-- 이를 통해 이론을 더 깊이 이해할 수 있다.
+- 학교에서는 이론을 위주로 배웁니다.
+- 소프트웨어 개발자로 일하면서 코드 한 줄 못 짜는 사람이 많습니다.
+- 저자가 프로그래밍 대회를 통해 느꼈던 즐거움을 공유하려 합니다.
+- 이를 통해 이론을 더 깊이 이해할 수 있습니다.
 
 # 1장. 문제해결과 프로그래밍 대회
 
 ## 1.1 도입
 
-- 프로그래머라는 직업의 틀 안에는 많은 종류가 있지만 어떤 분야를 막론하고 문제해결능력은 필수적이다.
-- 그러나 실무에서는 문제해결 자체보다 전체 시스템의 구조에 영향을 받는 경우가 많으므로 문제해결 능력을 기르는 것은 어렵다.
-- 알고리즘에 대한 이론과 지식이 퍼즐조각이라면 이것을 맞춰서 큰 그림을 만드는게 문제해결 능력이다.
-- 이러한 문제해결 능력은 추상적인 기술이므로 훈련하기가 어려운데 가장 좋은 방법은 (온라인, 오프라인) 프로그래밍 대회에 자주 참가하는 것이다.
+- 프로그래머라는 직업의 틀 안에는 많은 종류가 있지만 어떤 분야를 막론하고 문제해결능력은 필수적입니다.
+- 그러나 실무에서는 문제해결 자체보다 전체 시스템의 구조에 영향을 받는 경우가 많으므로 문제해결 능력을 기르는 것은 어렵습니다.
+- 알고리즘에 대한 이론과 지식이 퍼즐조각이라면 이것을 맞춰서 큰 그림을 만드는게 문제해결 능력입니다.
+- 이러한 문제해결 능력은 추상적인 기술이므로 훈련하기가 어려운데 가장 좋은 방법은 (온라인, 오프라인) 프로그래밍 대회에 자주 참가하는 것입니다.
 
 ## 1.2 프로그래밍 대회 
 
@@ -65,7 +65,7 @@
 
 #### 프로그래밍 대회에서 배울 수 있는 것들
 
-위와 같이 프로그래밍 대회의 문제는 현업에서 접하는 문제들과는 다르다. 이를 통해 배울 수 있는 것들은 아래와 같다.
+위와 같이 프로그래밍 대회의 문제는 현업에서 접하는 문제들과는 다릅니다. 이를 통해 배울 수 있는 것들은 아래와 같습니다.
 
 - 그래픽 인터페이스가 없으므로 문제해결에만 집중할 수 있음
 - 알고리즘과 자료구조를 직접 사용해 볼 수 있는 계산집중적 문제임
@@ -102,7 +102,7 @@
 - Introduction to Algorithms : 전 세계 전산학과 알고리즘, 자료구조의 교과서
 - Programming Challenges : 바야돌리드 대학교의 문제와 문제풀이 일부, 좋은 입문서
 - The Art of Computer Programming : 알고리즘 부야의 가장 권이 있는 책, MMIX 어셈블리를 사용하기 때문에 진입장벽 있음
-- 프로그래밍 콘테트 챌린징 : 일본의 프로그래밍 고수들이 쓴 책으로 실용적이고 다양한 테크닉
+- 프로그래밍 콘테스트 챌린징 : 일본의 프로그래밍 고수들이 쓴 책으로 실용적이고 다양한 테크닉
 
 # 2장. 문제 해결 개관
 
@@ -122,7 +122,7 @@
   1. 칠판에 문제를 적는다.
   2. 골똘히 생각한다.
   3. 칠판에 답안을 적는다.
-- 반쯤 농담이지만, 중요한 점은 문제해결 방법을 단계별로 나눠야 한다는 것
+- 반쯤 농담이지만, 중요한 점은 문제해결 방법을 단계별로 나눴다는 점입니다.
 
 #### 어떻게 문제를 풀 것인가(How to Solve It)라는 유명한 책에 나온 문제 해결 과정
 
@@ -160,12 +160,12 @@
 
 #### 문제를 풀지 못 할 때
 
-- 위의 6단계를 통해서 문제를 풀지 못하는 경우가 있을 것이다.
-- 물론 최대한 직접 고민하여 해결방법을 찾는 것이 중요하다.
-- 그러나 너무 많은 시간을 허비하는 것도 비추이다.
-  - 직접 풀어보는 시간의 범위, 즉 기준을 정하고 그 시간이 지나면 다른 사람의 소스코드나 풀이를 참고
-- 자신이 왜 그러한 풀이를 떠올리지 못했는지 돌아보면서 해당 알고리즘, 자료구조, 풀이기법을 꼭 기록하자.
-  - 그래야만 유사한 문제를 봤을 때, 해당 기법이 떠오름
+- 위의 6단계를 통해서 문제를 풀지 못하는 경우가 있을 것입니다.
+- 물론 최대한 직접 고민하여 해결방법을 찾는 것이 중요합니다.
+- 그러나 너무 많은 시간을 허비하는 것도 비추합니다.
+  - 직접 풀어보는 시간의 범위, 즉 기준을 정하고 그 시간이 지나면 다른 사람의 소스코드나 풀이를 참고합시다.
+- 자신이 왜 그러한 풀이를 떠올리지 못했는지 돌아보면서 해당 알고리즘, 자료구조, 풀이기법을 꼭 기록합시다.
+  - 그래야만 유사한 문제를 봤을 때, 해당 기법이 떠오를 것입니다.
 
 #### 주의
 
@@ -176,16 +176,18 @@
 
 #### 직관과 체계적인 접근
 
-- 문제해결과정 3단계 : "전략 수립"은 실제로 막막한 경우가 많다.
-- 이럴 때는 문제해결을 위한 직관력을 키우는게 중요한데, 직관력도 문제를 많이 풀어봐야 향상된다.
-- 아래 10가지는 전략 수립를 위한 좋은 방법들이며 순서가 빠른게 더 강력한 방법이다.
+- 문제해결과정 3단계 : "전략 수립"은 실제로 막막한 경우가 많습니다.
+- 이럴 때는 문제해결을 위한 직관력을 키우는게 중요한데, 직관력도 문제를 많이 풀어봐야 향상됩니다.
+- 아래 10가지는 전략 수립를 위한 좋은 방법들이며 순서가 빠른게 더 강력한 방법입니다.
 
 #### 문제 해결 과정 3단계인 "전략수립" 을 위한 체계적인 접근방법 10가지
 
 1. 비슷한 문제를 풀어본 적이 있던가?
-   - 어떤 문제의 유형에는 어떤 알고리즘을 사용한다라는 것이 연상되는 경우이다
-   - 이를 위해서는 문제가 어떤 유형이고 이를 위한 해결법이 무엇인지를 체계적으로 공부해야 한다 이 책은 이러한 방법을 도와준다
-   - 이렇게 연상하는 것이다 : 문제유형-경우의 수, 해결법-동적계획법 / 문제유형-두 도시를 잇는 가장빠른 기차, 해결법-최단경로 알고리즘
+   - 어떤 문제의 유형에는 어떤 알고리즘을 사용한다라는 것이 연상되는 경우입니다.
+   - 이를 위해서는 문제가 어떤 유형이고 이를 위한 해결법이 무엇인지를 체계적으로 공부해야 한다 이 책은 이러한 방법을 도와줍니다.
+   - 해결법 연상의 예 
+     - 문제유형 : 경우의 수로 판단 / 해결법 : 동적계획법
+     - 문제유형 : 두 도시를 잇는 가장빠른 기차 / 해결법 : 최단경로 알고리즘
    - 연습문제) 합친 LIS 8장, 신호라우팅 30장, 음주운전단속 30장, 선거 공약 30장
 2. 단순한 방법에서 시작할 수 있을까?
    - 연습문제) 쿼드트리 뒤집기 7장
@@ -216,115 +218,115 @@
 
 ## 3.1 도입: 코딩의 중요성을 간과하지 말라
 
-- 문제해결 과정 5단계: 전략수행(코딩)은 역시 가장 중요하다.
-- 프로그래밍 대회라고 해서 동작만 잘 된다고 능사는 아니다. 
-- 왜냐하면 코드가 간결하고 이해하기 쉬워야만 디버깅이 쉽고 실수를 줄일 수 있다.
+- 문제해결 과정 5단계: 전략수행(코딩)은 역시 가장 중요합니다.
+- 프로그래밍 대회라고 해서 동작만 잘 된다고 능사는 아닙니다.
+- 왜냐하면 코드가 간결하고 이해하기 쉬워야만 디버깅이 쉽고 실수를 줄일 수 있기 때문입니다.
 
 ## 3.2 좋은 코드를 짜기 위한 원칙
 
-- 프로그래밍 대회를 위한 좋은 코딩습관 7가지
+프로그래밍 대회를 위한 좋은 코딩습관 7가지
 
-  1. 간결한 코드를 작성하기
+1. 간결한 코드를 작성하기
 
-     - 프로그래밍 대회에서는 전역변수와 매크로가 유용하다.
+   - 프로그래밍 대회에서는 전역변수와 매크로가 유용합니다.
 
-     - 왜냐하면 코드의 길이가 비교적 짧고, 실수를 줄이는 것이 더 중요하기 때문이다.
+   - 왜냐하면 코드의 길이가 비교적 짧고, 실수를 줄이는 것이 더 중요하기 때문입니다.
 
-     - 예를 들어 아래와 같이 for 문에 매크로를 사용하면 실수를 피할 수 있다. (C++ 11 부터는 굳이 필요 없다.)
+   - 예를 들어 아래와 같이 for 문에 매크로를 사용하면 실수를 피할 수 있습니다. (C++ 11 부터는 굳이 필요 없음)
+
+     ```c++
+     #define FOR(i,n) for(int i = 0; i < (n); ++i)
+     bool hasDuplicate(const vector<int>& array) {
+     	FOR(i,array.size())
+     		FOR(j,i)
+             	if(array[i] == array[j])
+                     return true;
+         return false;
+     }
+     ```
+
+   - 실수가 있는 코드
+
+     ```c++
+     for(int i = 0; i < array.size(); ++i)
+     	for(int j = 0; j < i; ++i)	// ++j 여야 함
+     ```
+
+2. 적극적으로 코드 재사용하기
+
+   - 3번 이상 사용되면 함수나 클래스로 분리하는 습관을 가집시다.
+   - 코드가 간결해지고 디버깅하기 쉬워집니다.
+   - 단, 프로그래밍 대회에서는 하나의 클래스나 함수가 여러가지 일을 해도 됩니다.
+     실무에서처럼 SRP(Single Responsibility Principle)는 지키지 않아도 됩니다.
+
+3. 표준 라이브러리 공부하기
+
+   - 표준 라이브러리에서 제공하는 알고리즘, 자료구조는 직접 구현하지 안 됩니다.
+   - 문자열, 동적배열, 스택, 큐, 리스트, 사전 등의 자료구조와 정렬 등의 표준알고리즘을 적극 사용합시다.
+
+4. 항상 같은 형태로 프로그램을 작성하기
+
+   - 자주 작성하는 코드나 알고리즘은 일관성 있게 구현해야 합니다.
+   - 예를 들어
+     - while / do-while 중 어떤것을 사용할지
+     - 2차원 배열을 크기를 가로/세로 or 세로/가로 중 어떤 순서로 전달할지
+
+5. 일관적이고 명료한 명명법 사용하기
+
+   - 이 부분은 실무에서 적용되는 규칙이 그대로 적용됩니다.
+
+   - 예를 들어
+
+     - 변수명을 모호하게 만들면 안 됩니다.
 
        ```c++
-       #define FOR(i,n) for(int i = 0; i < (n); ++i)
-       bool hasDuplicate(const vector<int>& array) {
-       	FOR(i,array.size())
-       		FOR(j,i)
-               	if(array[i] == array[j])
-                       return true;
-           return false;
+       int a[30][30], i, j, p[100], k=0, l=-1;
+       ```
+
+     - 함수명도 모호하게 만들지 말고, 무엇을 하는 함수인지 명료하게 작성해야 합니다.
+
+       ```c++
+       bool judge(int y, int x, int cy, int cx, int cr);
+       ```
+
+       ```c++
+       bool isInsideCircle(int y, int x, int cy, int cx, int cr)
+       ```
+
+6. 모든 자료를 정규화해서 저장하기
+
+   - 정규화는 어떤 자료를 입력받자마자 바로 수행해야 합니다.
+   - 예를 들어
+     - 유리수 :  9/6 = 3/2는 같으므로 기약분수로 표현
+     - 2차원 평면에서 각도 : -30도, 330도, 690도는 같은 값이므로 1가지로 통일
+     - 문자 : UTF-8, UTF-16인지 입력받자마자 바로 변환
+     - 시간 : UTC로 통일
+
+7. 코드와 데이터를 분리하기
+
+   - 예를 들어
+
+     - 아래 코드에서 각 달의 문자열 데이터는 분리해야 합니다.
+
+       ```c++
+       string getMonthName(int month) {
+        if(month == 1) return "January";
+        if(month == 2) return "Feburary";
+        ...
+        return "December";
        }
        ```
 
-     - 실수가 있는 코드
-
        ```c++
-       for(int i = 0; i < array.size(); ++i)
-       	for(int j = 0; j < i; ++i)	// ++j 여야 함
+       const string monthName[] = {"January", "Feburary", ..., "December"};
        ```
 
-  2. 적극적으로 코드 재사용하기
+     - 체스판 같은 게임보드에서 상대좌표
 
-     - 3번 이상 사용되면 함수나 클래스로 분리하는 습관을 갖자.
-     - 코드가 간결해지고 디버깅하기 쉬워진다.
-     - 하나의 클래스나 함수가 여러가지 일을 해도 된다.
-       실무에서처럼 SRP(Single Responsibility Principle)는 지키지 않아도 된다.
-
-  3. 표준 라이브러리 공부하기
-
-     - 표준 라이브러리에서 제공하는 알고리즘, 자료구조는 직접 구현하지 말자.
-     - 문자열, 동적배열, 스택, 큐, 리스트, 사전 등의 자료구조와 정렬 등의 표준알고리즘을 적극 사용하자.
-
-  4. 항상 같은 형태로 프로그램을 작성하기
-
-     - 자주 작성하는 코드나 알고리즘은 일관성 있게 구현해야 한다.
-     - 예를 들어
-       - while / do-while 중 어떤것을 사용할지
-       - 2차원 배열을 크기를 가로/세로 or 세로/가로 중 어떤 순서로 전달할지
-
-  5. 일관적이고 명료한 명명법 사용하기
-
-     - 이 부분은 실무에서 적용되는 규칙이 그대로 적용된다.
-
-     - 예를 들어
-
-       - 변수명을 모호하게 만들지 말자.
-
-         ```c++
-         int a[30][30], i, j, p[100], k=0, l=-1;
-         ```
-
-       - 함수명도 모호하게 만들지 말고, 무엇을 하는 함수인지 명료하게 작성하자.
-
-         ```c++
-         bool judge(int y, int x, int cy, int cx, int cr);
-         ```
-
-         ```c++
-         bool isInsideCircle(int y, int x, int cy, int cx, int cr)
-         ```
-
-  6. 모든 자료를 정규화해서 저장하기
-
-     - 정규화는 어떤 자료를 입력받자마자 바로 수행해야 한다
-     - 예를 들어
-       - 유리수 :  9/6 = 3/2는 같으므로 기약분수로 표현
-       - 2차원 평면에서 각도 : -30도, 330도, 690도는 같은 값이므로 1가지로 통일
-       - 문자 : UTF-8, UTF-16인지 입력받자마자 바로 변환
-       - 시간 : UTC로 통일
-
-  7. 코드와 데이터를 분리하기
-
-     - 예를 들어
-
-       - 아래 코드에서 각 달의 문자열 데이터는 분리해야 한다.
-
-         ```c++
-         string getMonthName(int month) {
-          if(month == 1) return "January";
-          if(month == 2) return "Feburary";
-          ...
-          return "December";
-         }
-         ```
-
-         ```c++
-         const string monthName[] = {"January", "Feburary", ..., "December"};
-         ```
-
-       - 체스판 같은 게임보드에서 상대좌표
-
-         ```c++
-         const int knightDx[8] = { 2,  2, -2, -2, 1, 1, -1, -1 };
-         const int knightDy[8] = { 1, -1,  1, -1, 2, 2,  2, -2 };
-         ```
+       ```c++
+       const int knightDx[8] = { 2,  2, -2, -2, 1, 1, -1, -1 };
+       const int knightDy[8] = { 1, -1,  1, -1, 2, 2,  2, -2 };
+       ```
 
 ## 3.3 자주하는 실수
 
@@ -332,12 +334,11 @@
 
 1. 산술 오버플로우
    - 중요해서 3.5에서 따로 다룸
-
 2. 배열 범위 밖 원소에 접근
 
-   - 배열의 size와 index를 꼭 구별해서 사용하자
+   - 배열의 size와 index를 꼭 구별해서 사용합시다.
 
-   - 아래와 같이 선언해서 array[10] 에 접근하면 컴파일 에러도 안나기 때문에 디버깅하기 어려운 문제가 런타임에 발생한다
+   - 아래와 같이 선언해서 array[10] 에 접근하면 컴파일 에러도 안나기 때문에 디버깅하기 어려운 문제가 런타임에 발생합니다.
 
      ```c++
      int array[10], t;
@@ -348,51 +349,51 @@
      - (2, 10) : 3~9
    - 닫힌구간
      - [2, 10] : 2~10
-   - C++을 포함하는 대부분의 프로그래밍 언어는 half-open interval 을 사용함을 기억하자
+   - C++을 포함하는 대부분의 프로그래밍 언어는 half-open interval 을 사용함을 기억합시다.
      - [2, 10) : 2~9
-   - C++ STL의 iterato에서 이와 같은 방법을 사용함을 기억하자
+   - C++ STL의 iterato에서 이와 같은 방법을 사용함을 기억합시다.
      - list.begin() : 시작원소
-     - list.end() : null 이다, list.end()-1 을 사용해야 null에 접근하지 않는다
-   - 이러한 법칙에 일관성이 없으면 어떤 함수를 호출할때 전달하는 값의 범위와 함수내부에서 사용하는 범위가 달라질 수 있기 때문에 일관성을 갖자
+     - list.end() : null 이다, list.end()-1 을 사용해야 null에 접근하지 않습니다.
+   - 이러한 법칙에 일관성이 없으면 어떤 함수를 호출할때 전달하는 값의 범위와 함수내부에서 사용하는 범위가 달라질 수 있기 때문에 일관성을 가져야 합니다.
 
 4. Off-by-one 오류
-   - 어떤 연산에서 1개 차이로 오류가 발생하는 경우를 뜻한다
-   - 예를 들어 100미터 거리에 10미터마다 기둥을 세운다고 할 때 기둥의 개수는 11개이다
-   - 즉, A[0] ~ A[10] 까지의 평균을 구할때는 아래와 같다
+   - 어떤 연산에서 1개 차이로 오류가 발생하는 경우를 뜻합니다.
+   - 예를 들어 100미터 거리에 10미터마다 기둥을 세운다고 할 때 기둥의 개수는 11개입니다.
+   - 즉, A[0] ~ A[10] 까지의 평균을 구할때는 아래와 같습니다.
    - A[0] + A[10] / 11 (end - begin + 1)
-   - 또한, A[1] ~ A[1] 까지의 평균은 아래와 같다
+   - 또한, A[1] ~ A[1] 까지의 평균은 아래와 같습니다.
    - A[1] / 1 (end - begin + 1)
 
 5. 컴파일러가 잡아주지 못하는 상수 오타
-   - 정말 단순한 실수가 오답으로 판정되는 경우가 즐비하다
-   - 실수를 줄이는 것이 중요하다
+   - 정말 단순한 실수가 오답으로 판정되는 경우가 많습니다.
+   - 실수를 줄이는 것이 중요합니다.
    - 예1) weird 를 wierd 로 쓴 경우
    - 예2) 1000000000 <- 0의 개수를 틀리는 경우
    - 예3) C++에서 64비트는 상수 뒤에 LL을 붙여야 하는데 붙이지 않은 경우
 
 6. 스택 오버플로우
-   - 프로그래밍 대회에서는 재귀함수도 자주 사용하기 때문에 유의할 필요가 있다
-   - C++의 경우, 배열이나 클래스를 지역변수로 선언하면 스택을 사용한다
-   - 따라서 기본적으로 힙을 사용하게 되는 STL컨테이너를 사용하는 것이 더 좋은 방법이다
+   - 프로그래밍 대회에서는 재귀함수도 자주 사용하기 때문에 유의할 필요가 있습니다.
+   - C++의 경우, 배열이나 클래스를 지역변수로 선언하면 스택을 사용합니다.
+   - 따라서 기본적으로 힙을 사용하게 되는 STL컨테이너를 사용하는 것이 더 좋은 방법입니다.
 
 7. 다차원 배열 인덱스 순서 바꿔쓰기
-   - 실무에서는 2차원 배열보다 차수가 큰 배열을 사용하는 경우가 드물지만 프로그래밍 대회에서는 이런 상황이 종종 발생한다
-   - 이것을 헷갈리지 말아야 하며 8장의 메모이제이션 부분을 설명할때 상세히 배운다
+   - 실무에서는 2차원 배열보다 차수가 큰 배열을 사용하는 경우가 드물지만 프로그래밍 대회에서는 이런 상황이 종종 발생합니다.
+   - 이것을 헷갈리지 말아야 하며 8장의 메모이제이션 부분을 설명할때 상세히 배웁니다.
 
 8. 잘못된 비교 함수 작성
 
    - C++ < 연산자의 성질
 
-     - a<a는 항상 거짓입니다, 이 성질을 비반사성이라고 합니다
+     - a<a는 항상 거짓입니다, 이 성질을 비반사성이라고 합니다.
 
-     - a<b가 참이면 b<a는 거짓입니다, 이 성질을 비대칭성이라고 합니다
+     - a<b가 참이면 b<a는 거짓입니다, 이 성질을 비대칭성이라고 합니다.
 
-     - a<b가 참이고 b<c가 참이면 a<c 입니다, 이 성질을 전이성이라고 합니다
+     - a<b가 참이고 b<c가 참이면 a<c 입니다, 이 성질을 전이성이라고 합니다.
 
-     - a<b와 b<a가 모두 거짓이면 a와b는 같은 값으로 간주합니다, a와b가 같고, b와c가 같다면 a와c도 같아야 합니다
-       이 성질을 상등관계의 전이성이라고 합니다
+     - a<b와 b<a가 모두 거짓이면 a와b는 같은 값으로 간주합니다, a와b가 같고, b와c가 같다면 a와c도 같아야 합니다.
+       이 성질을 상등관계의 전이성이라고 합니다.
 
-     - 위의 정보를 참고하여 아래와 같이 집합 비교함수를 overloading 해서 C++ 표준 정렬함수(sort)에 전달하면 결과를 예측할 수 없습니다
+     - 위의 정보를 참고하여 아래와 같이 집합 비교함수를 overloading 해서 C++ 표준 정렬함수(sort)에 전달하면 결과를 예측할 수 없습니다.
 
        ```c++
        // 진부분집합을 판정하는 함수
@@ -409,21 +410,21 @@
        }
        ```
 
-   - 이 때, 아래와 같은 3가지 집합을 정렬함수에 전달하면 위의 규칙에 혼란이 온다
+   - 이 때, 아래와 같은 3가지 집합을 정렬함수에 전달하면 위의 규칙에 혼란이 발생합니다.
 
      - {1} < {2} < {2,3} 
 
-     - 먼저, isProperSubset 함수는 {2} < {2,3} 에 대해 true 를 반환하는데 이와 다른 결과도 아래처럼 생성된다
+     - 먼저, isProperSubset 함수는 {2} < {2,3} 에 대해 true 를 반환하는데 이와 다른 결과도 아래처럼 생성됩니다.
 
-     - C++ < 연산자 "규칙4"에 의해 아래 2가지가 성립된다
+     - C++ < 연산자 "규칙4"에 의해 아래 2가지가 성립됩니다.
 
-     - {1}<{2} : 거짓 / {2}<{1} : 거짓이므로 {1} == {2}
+       - {1}<{2} : 거짓 / {2}<{1} : 거짓이므로 {1} == {2}
 
-     - {1}<{2,3} : 거짓 / {2,3}<{1} : 거짓이므로 {1} == {2,3}
+       - {1}<{2,3} : 거짓 / {2,3}<{1} : 거짓이므로 {1} == {2,3}
 
-     - 따라서, {1} == {2} == {2,3} 가 되고 {2} < {2,3} 과 충돌이 남
+     - 이로 인해 {1} == {2} == {2,3} 가 되고 {2} < {2,3} 과 충돌이 발생하게 됩니다.
 
-     - 그러므로 아래와 같이 구현해야 한다
+     - 그러므로 아래와 같이 구현해야 합니다.
 
        ```c++
        bool operator<(const IntegerSet& a, const IntegerSet& b)
@@ -437,9 +438,9 @@
 
 9. 최소, 최대 예외 잘못 다루기
 
-   - 최대,최소값(즉, 경계값)에 대한 오류만 확인해도 많은 문제를 사전에 예방할 수 있습니다
+   - 최대,최소값(즉, 경계값)에 대한 오류만 확인해도 많은 문제를 사전에 예방할 수 있습니다.
 
-   - 예를 들어, 아래코드는 소수를 구별하는 코드인데 최소값 문제가 있습니다
+   - 예를 들어, 아래코드는 소수를 구별하는 코드인데 최소값 문제가 있습니다.
 
       ```c++
       bool isPrime(int n)
@@ -500,21 +501,21 @@
 
 #### 디버깅에 관하여
 
-- 직접 눈으로 디버깅하는 연습을 해야 한다.
+- 직접 눈으로 디버깅하는 연습을 합시다.
   - 소스코드가 길지 않아서 눈이 더 빠름
   - 재귀호출이나 중복반복문은 디버깅 도구를 사용하면 오히려 어려울 수 있음
   - ACM-ICPC 같은 대회는 3명이 1개의 PC를 쓰기 때문에 애초에 불가능함
-- 디버깅 도구 대신에 아래와 같은 습관을 들이면 좋다.
+- 디버깅 도구 대신에 아래와 같은 방법을 사용해 봅시다.
   - 입력이 크면 디버깅이 어려우므로 오동작을 일으키는 간단한 입력을 찾기
   - assert문 사용하기
   - 계산과정의 중간결과를 출력하기
-- 물론, 런타임 에러 등으로 프로그램이 죽을때는 디버거를 사용하는 것이 더 좋다.
+- 물론, 런타임 에러 등으로 프로그램이 죽을때는 스택정보를 보기 위해 디버거를 사용하는 것이 더 좋습니다.
 
 #### 테스트에 관하여
 
-- 시간이 된다면 테스트 케이스는 최대한 많이 돌려보는게 좋다.
-- 테스트코드를 자동화하는 것도 하나의 방법이다. (스캐폴딩이라고도 함)
-- (이런 상황이 많지 않지만) 만약 정렬알고리즘을 구현한다면, STL표준 함수인 sort()와 비교해 보는 것도 방법이다.
+- 시간이 된다면 테스트 케이스는 최대한 많이 돌려보는게 좋습니다.
+- 테스트코드를 자동화하는 것도 하나의 방법입니다. (스캐폴딩이라고도 함)
+- (이런 상황이 많지 않지만) 만약 정렬알고리즘을 구현한다면, STL표준 함수인 sort()와 비교해 보는 것도 방법입니다.
 
 ## 3.5 변수 범위의 이해
 
@@ -530,123 +531,130 @@
 
 - 너무 큰 중간 값
 
-  - 최소공배수를 구하는 아래 코드는 문제를 일으킨다
+  - 최소공배수를 구하는 아래 코드는 문제를 일으킵니다.
 
-  ```
-  // 최대공약수를 구하는 함수
-  int gcd(int a, int b);
-  
-  // 최소공배수를 구하는 함수
-  int lcm(int a, int b)
-  {
-    return (a*b) / gcd(a,b);
-  }
-  ```
+    ```c++
+    // 최대공약수를 구하는 함수
+    int gcd(int a, int b);
+    
+    // 최소공배수를 구하는 함수
+    int lcm(int a, int b)
+    {
+      return (a*b) / gcd(a,b);
+    }
+    ```
 
-  - 만약 lcm(50000, 100000) 을 해보면 최소공배수는 100,000 이 나와야 한다 그러나 실제로는 14,100 이 반환된다
-  - 그 이유는 a*b = 50,000 x 100,000 = 5 *10^9 = 5,000,000,000가 되어 (signed) int 의 최대값인 2,147,483,647을 넘어간다
-  - 문제는 C++ 컴파일러는 이러한 경우에 경고를 하지 않기 때문에 프로그래머는 이런 부분에 항상 유의해야 한다
+  - 만약 lcm(50000, 100000) 을 해보면 최소공배수는 100,000 이 나와야 한다 그러나 실제로는 14,100 이 반환됩니다.
+  - 그 이유는 a*b = 50,000 x 100,000 = 5 *10^9 = 5,000,000,000가 되어 (signed) int 의 최대값인 2,147,483,647을 넘어가기 때문입니다.
+  - C++ 컴파일러는 이러한 경우에 경고를 하지 않기 때문에 프로그래머는 이런 부분에 항상 유의해야 합니다.
 
 - 너무 큰 무한대 값
 
-  - 알고리즘을 구현하다 보면 아직 알지 못하는 값을 무한대로 지정하곤 한다
-  - 이 때는 무한대 값을 가지고 곱셈 등의 연산을 하는지 확인한 후, 적절한 값을 선택한다
-  - 예를 들어, 필자의 경우 signed int 에 대해서는 아래와 같이 무한대값을 설정하곤 한다
+  - 알고리즘을 구현하다 보면 아직 알지 못하는 값을 무한대로 지정하곤 합니다.
+  - 이 때는 무한대 값을 가지고 곱셈 등의 연산을 하는지 확인한 후, 적절한 값을 선택합니다.
+  - 예를 들어, 필자의 경우 signed int 에 대해서는 아래와 같이 무한대값을 설정하곤 합니다.
     - 987,654,321
-    - 이것은 2^30 에 가까울 정도로 크며, 2개가 더해지더라도 오버플로우가 나지 않는다
+    - 이것은 2^30 에 가까울 정도로 크며, 2개가 더해지더라도 오버플로우가 나지 않습니다.
 
 - 오버플로우 피해하기
 
-  - 가장 간단한 방법은 더 큰 자료형을 쓰는 것이다
-  - 예를 들어, 앞에 lcm 함수는 64비트 정수형을 쓰면 쉽게 고칠 수 있다
+  - 가장 간단한 방법은 더 큰 자료형을 쓰는 것입니다.
 
-  ```
-  int lcm(int a, int b)
-  {
-    return (a * (long long) b) / gcd(a,b);
-  }
-  ```
+  - 예를 들어, 앞에 lcm 함수는 64비트 정수형을 쓰면 쉽게 고칠 수 있습니다.
 
-  - 두번째 방법은 연산의 순서를 바꾸는 것이다
+    ```c++
+    int lcm(int a, int b)
+    {
+      return (a * (long long) b) / gcd(a,b);
+    }
+    ```
 
-  ```
-  int lcm(int a, int b)
-  {
-    return a * (b / gcd(a,b));
-  }
-  ```
+  - 두번째 방법은 연산의 순서를 바꾸는 것입니다.
 
-  - 연산방법을 다르게 하는 경우도 있는데(동적계획법) 이러한 방법은 8장에서 심화하여 다룬다
+    ```c++
+    int lcm(int a, int b)
+    {
+      return a * (b / gcd(a,b));
+    }
+    ```
+
+  - 연산방법을 다르게 하는 경우도 있는데(동적계획법) 이러한 방법은 8장에서 심화하여 다룹니다.
 
 - 자료형의 프로모션
 
-  - C++ 에서 연산에 의한 자료형 프로모션 규칙은 아래와 같습니다
+  - C++ 에서 연산에 의한 자료형 프로모션 규칙은 아래와 같습니다.
     - 규칙1: 한쪽은 정수형이고 한쪽은 실수형 - 정수형이 실수형으로 변환
     - 규칙2: 양쪽이 정수형이거나 양쪽이 실수형 - 보다 넓은 범위를 갖는 자료형으로 변환
     - 규칙3: 양쪽이 int형보다 작은 정수형인 경우 - 둘 다 int형으로 변환됨
     - 규칙4: 부호 없는 정수형과 부호 있는 정수형이 섞여 있는 경우 - 부호 없는 정수형으로 변환됨
-  - 예를 들어 아래와 같은 수식의 결과는 어떻게 될까?
-
-  ```
-  unsigned char a = 17;
-  short b = -18;
-  int c = 2;
-  unsinged int d = 0;
-  
-  cout << (a + b) * c + d << endl;
-  ```
-
-  - (17 - 18) x 2 + 0 = -2 가 되어야 하지만 실제로는 그렇지 않다
-  - 왜냐하면 규칙4에 의해서 최종결과값은 unsigned int 가 되는데 -2 라는 값은 저장할 수 없기 때문에 오버플로우가 발생한다
-  - 결과값은 4,294,967,294 가 출력된다
-  - C#, JAVA 등에서는 발생하지 않는 문제이지만 C++을 사용하는 이상 항상 고려해야 한다
-  - 아래와 같은 경우도 마찬가지이다
-
-  ```
-  bool isSorted(const vector<int>& seq)
-  {
-    for(int i =0; i<seq.size() - 1; ++i)
-      if(seq[i] > seq[i+1])
-        return false;
     
-    return true;
-  }
+- 예를 들어 아래와 같은 수식의 결과는 어떻게 될까요?
+  
+    ```c++
+    unsigned char a = 17;
+    short b = -18;
+    int c = 2;
+    unsinged int d = 0;
+    
+    cout << (a + b) * c + d << endl;
   ```
+  
+  - (17 - 18) x 2 + 0 = -2 가 되어야 하지만 실제로는 그렇지 않습니다.
+  
+  - 왜냐하면 규칙4에 의해서 최종결과값은 unsigned int 가 되는데 -2 라는 값은 저장할 수 없기 때문에 오버플로우가 발생하기 때문입니다.
+  
+- 결과값은 4,294,967,294 가 출력됩니다.
+  
+  - C#, JAVA 등에서는 발생하지 않는 문제이지만 C++을 사용하는 이상 항상 고려해야 합니다.
+  
+  - 아래와 같은 경우도 마찬가지입니다.
+  
+    ```c++
+    bool isSorted(const vector<int>& seq)
+    {
+      for(int i =0; i<seq.size() - 1; ++i)
+        if(seq[i] > seq[i+1])
+          return false;
+      
+      return true;
+    }
+    ```
+  
 
 ## 3.6 실수 자료형의 이해
 
-- 결론적으로는 컴퓨터로는 근사값만을 제공할 수 있으므로 최대한 사용하지 않는 것이 좋다
+- 결론적으로는 컴퓨터로는 근사값만을 제공할 수 있으므로 최대한 사용하지 않는 것이 좋습니다
 
-- 실수가 부정확할 수 밖에 없는 이유는 아래와 같다
+- 실수가 부정확할 수 밖에 없는 이유는 아래와 같습니다.
 
-  - 이진수 0.11111 이 있다면 각각의 1은 아래를 의미한다
+  - 이진수 0.11111 이 있다면 각각의 1은 아래를 의미합니다.
   - 0.5, 0.25, 0.125, 0.0625, 0.03125... 
-  - 즉, 10진수의 소수를 표현하려면 2씩 나눠간 값을 더하는 구조이므로 제한된 비트수에서는 동일한 값을 표현할 수 없다
+  - 즉, 10진수의 소수를 표현하려면 2씩 나눠간 값을 더하는 구조이므로 제한된 비트수에서는 동일한 값을 표현할 수 없습니다.
 
 - 예제
 
   - 아래 코드의 출력결과?
 
-  ```
-  float a = 69.82;
-  float b = 69.20 + 0.62;
-  
-  if(a == b)
-      printf("Equal");
-  else
-      printf("Not Equal");
-  ```
+    ```c++
+    float a = 69.82;
+    float b = 69.20 + 0.62;
+    
+    if(a == b)
+        printf("Equal");
+    else
+        printf("Not Equal");
+    ```
 
   - 아래 코드의 출력결과?
 
-  ```
-  float a = 0.775;
-  printf("Result = %.2f",a);
-  ```
+    ```c++
+    float a = 0.775;
+    printf("Result = %.2f",a);
+    ```
 
-- 실수형을 사용하려면 오차범위를 명확하게 예상하거나 되도록이면 64비트 실수형(double)을 사용하는 것이 좋다
+- 실수형을 사용하려면 오차범위를 명확하게 예상하거나 되도록이면 64비트 실수형(double)을 사용하는 것이 좋습니다.
 
-- 실수연산을 정수연산으로 변환하는 것도 고려해보자
+- 실수연산을 정수연산으로 변환하는 것도 고려해봅시다.
 
-  - 예를 들어, a/bxc=정수 라는 것을 알고 있다면 (axc)/b 와 같은 형태로 계산한다
-  - 자리수를 정수배 늘려서 계산한다
+  - 예를 들어, a/bxc=정수 라는 것을 알고 있다면 (axc)/b 와 같은 형태로 계산
+  - 자리수를 정수배 늘려서 계산
