--- a/doc/ch1-5.md
+++ b/doc/ch1-5.md
@@ -78,7 +78,7 @@
 
 #### 이 책의 구성
 
-- 전체 7부로 구성 1,2부(1장~5장)는 기본지식 함양이며 3부 이부터는 알고리즘 설계 기법과 자료구조 등
+- 전체 7부로 구성 1,2부(1장~5장)는 기본지식 함양이며 3부 이후부터는 알고리즘 기법과 자료구조
 - 책에 있는 모든 연습문제는 [algospot](http://algospot.com)에서 실제로 풀어볼 수 있으며 채점받을 수 있음
 ![](images/1.jpg)
 
@@ -95,7 +95,6 @@
 
 - 가능한 한 많은 문제 풀기
 - 온라인 채점 사이트 이용하기
-- 교재 참조
 
 ## 1.6 더 읽을거리
 
