--- a/doc/ch1-5.md
+++ b/doc/ch1-5.md
@@ -100,7 +100,7 @@
 
 - Introduction to Algorithms : 전 세계 전산학과 알고리즘, 자료구조의 교과서
 - Programming Challenges : 바야돌리드 대학교의 문제와 문제풀이 일부, 좋은 입문서
-- The Art of Computer Programming : 알고리즘 부야의 가장 권이 있는 책, MMIX 어셈블리를 사용하기 때문에 진입장벽 있음
+- The Art of Computer Programming : 알고리즘 부야의 가장 권위 있는 책, MMIX 어셈블리를 사용하기 때문에 진입장벽 있음
 - 프로그래밍 콘테스트 챌린징 : 일본의 프로그래밍 고수들이 쓴 책으로 실용적이고 다양한 테크닉
 
 # 2장. 문제 해결 개관
