--- a/doc/ch1-3.md
+++ b/doc/ch1-3.md
@@ -1,7 +1,7 @@
 # 개관
 
 - 학교에서는 이론을 위주로 배웁니다.
-- 소프트웨어 개발자로 일하면서 코드 한 줄 못 짜는 사람이 많습니다.
+- 소프트웨어 개발자로 일하지만 코딩에는 서투른 사람이 많습니다.
 - 저자가 프로그래밍 대회를 통해 느꼈던 즐거움을 공유하려 합니다.
 - 이를 통해 이론을 더 깊이 이해할 수 있습니다.
 
@@ -183,35 +183,120 @@
 
 1. 비슷한 문제를 풀어본 적이 있던가?
    - 어떤 문제의 유형에는 어떤 알고리즘을 사용한다라는 것이 연상되는 경우입니다.
-   - 이를 위해서는 문제가 어떤 유형이고 이를 위한 해결법이 무엇인지를 체계적으로 공부해야 한다 이 책은 이러한 방법을 도와줍니다.
+   - 이를 위해서는 문제가 어떤 유형이고 이를 위한 해결법이 무엇인지를 체계적으로 공부해야 합니다
    - 해결법 연상의 예 
-     - 문제유형 : 경우의 수로 판단 / 해결법 : 동적계획법
-     - 문제유형 : 두 도시를 잇는 가장빠른 기차 / 해결법 : 최단경로 알고리즘
-   - 연습문제) 합친 LIS 8장, 신호라우팅 30장, 음주운전단속 30장, 선거 공약 30장
-2. 단순한 방법에서 시작할 수 있을까?
-   - 연습문제) 쿼드트리 뒤집기 7장
+     - 문제유형 : 사건의 발생확률이나 경우의 수를 구해야 함 >>> 해결법 : 동적계획법
+     - 문제유형 : 두 도시를 잇는 가장빠른 기차 >>> 해결법 : 최단경로 알고리즘
+2. 단순한 방법에서 시작할 수 있을까? (점진적인 개선)
+   - 해결방법이 잘 떠오르지 않는다면 "무식하게 풀 수 있을까?"로 시작해 봅니다.
+     - 즉, 공간 혹은 시간적 제약사항을 고려하지 않고 어떻게든 해결하는 방법을 찾아보는 것입니다.
+     - 예를 들어 모든 경우의 수를 다 훑어보는 것 등
+     - 주어진 시간내에 문제를 해결할 수 없더라도 실마리를 얻을 수 있습니다.
+     - 점진적으로 개선하면 주어진 시간내에 동작하도록 구현하는데 성공할 수도 있습니다.
+   - 점진적인 개선의 예제
+     - 3명의 어린이에게 사탕을 가장 공평하게 나눠주는 방법은?
+       - 사탕의 개수 : N(N <= 30)개
+       - 사탕의 무게 : 최대 20 (정수)
+       - 공평함의 의미 : 사탕의 총 무게의 차이가 가장 작음 (가장 많이 받은 아이 vs 가장 적게 받은 아이)
+     - 제일 단순한 방법 (6장의 주제 : 완전탐색)
+       - 모든 경우의 수 : 3^30 = ‭205,891,132,094,649‬ 개 (약 205조개)
+       - 주어진 시간 내에 실패할 확률이 큽니다.
+     - 1차 개선
+       - idea : 1명이 받은 사탕의 무게가 같다면 같은 경우로 볼 수 있음 (29장의 주제 : 너비우선탐색)
+       - 3명에게 배분한 사탕을 무게로 표현하면 아래와 같음
+         - (0g, 0g, 0g) ~ (600g, 600g, 600g)   
+           ※ 600g = 20 x 30
+         - 따라서 경우의 수는 :  600 ^ 3 = ‭216,000,000‬ 개 (약 2억개)
+     - 2차 개선
+       - idea : 사탕의 총 무게(많은 아이 - 적은 아이)의 차는 20g을 넘을 수 없음
+         ※ 왜냐하면 20이 넘으면 제일 많이 받은 아이가 제일 적게 받은 아이한테 하나 주면 되니깐
+       - 공평하게 주는게 목적이므로)가장 많이 받는 아이의 사탕은 (20 x N) / 3 + 20 = 220g 을 넘을 수 없음
+         - (0g, 0g, 0g) ~ (220g, 220g, 220g)
+         - 따라서 경우의 수는 : 220 ^ 3 = ‭10,648,000‬ (약 1000만개)
+     - 3차 개선
+       - idea : (180, 190, 200) 과 (200, 190, 180) 은 같은 답임
+         ※ 문제에서 누가 많은 받든지 순서는 중요하지 않으므로 중복
+       - 따라서 경우의 수는 : 10,648,000 / 6 = 1,774,666 (약 200만개)
+         ※ 3가지 수를 나열하는 방법 6을 (3 x 2 x 1) 나눠서
+     - 회고
+       - 단순하게 풀면 2조개의 경우의 수를 모두 체크해봐야 했음 - 실패할 확률이 매우 높았음
+       - 3차 개선결과, 205조 / 200만 = 1억배 개선 되었음
+       - 8장 동적계획법에 이러한 방법을 많이 다룸
 3. 손으로 풀어보기 (교재의 제목 오타인 것 같음)
-   - 연습문제) Quantization 8장, 두니발 박사의 탈옥 8장, 실험 데이터 복구하기 9장, 출전순서 정하기 10장, 마법의 약 14장, 함정설치 32장
+   - 바로 위에서처럼 점진적으로 할 수 있다면 얼마나 좋을까요?
+   - 그러한 해결방법이 떠오르지 않을 때는 완전히 새로운 방향을 고민해보는 것도 좋습니다.
+   - 손으로 풀어보는 습관은 그러한 방법 중 하나입니다.
 4. 문제를 단순화할 수 없을까?
-   - 연습문제) 비대칭 타일링 8장, 드래곤커브 9장, 도시락 데우기 10장, 어린이날 29장, 근거리 네트워크 31장
-     ![](images/2.jpg)
+   - 복잡한 문제를 좀 더 쉽게 변형해서 풀어보면 어떨까요?
+     - 문제의 제약 조건 없애보기
+     - 계산에 필요한 변수 줄여보기
+     - 다차원 문제를 1차원으로 바꿔보기
+   - 예제
+     - 2차원 격자에 N개의 점이 있을 때, 모든 점과의 거리가 최소가 되는 좌표를 찾으시오.
+       - 두 점의 거리 : x좌표의 차이 + y 좌표의 차이
+         ※ 예 : 두 점 (7, 1), (2, 3) 간의 거리는 5 + 2 = 7
+       - 선을 따라서 가로, 세로 방향으로만 이동가능
+       - 주어진 좌표
+         ![](images/2.jpg)
+     - 해결방법
+       - idea #1 : 1차원으로 바꿔보기
+         ※ 두 점의 "x좌표의 차이" vs "y좌표의 차이"는 서로 독립변수임
+       - idea #2 : (1차원에서) N이 홀수이면 가운데 있는 점이 최저거리이고, 짝수이면 가운데 있는 두 점 사이가 최저거리임
 5. 그림으로 그려볼 수 있을까?
-   - 2차원평면, 직선에 그려보는 것이다, 항상 성공할 수는 없지만 결정적인 방법을 찾아낼 수도 있다
-   - 연습문제) 문자열 함치기 10장, 너드인가 너드가 아닌가 15장, 너드인가 너드가 아닌가 2 22장
+   - 숫자보다 도형이 이해하기 쉽습니다.
+   - 예를 들어 바로 위 예제문제에서
+     - 그림대신 (x, y)같은 형태들만 주어졌다면? 거꾸로 2차원 좌표에 그려보는 것이 가능했음
+   - 항상 성공할 수는 없지만 결정적인 방법을 찾아낼 수도 있습니다.
 6. 수식으로 표현할 수 있을까?
-   - 연습문제) 수강철회 12장
+   - 6번은 특이하게 평문을 수식으로 표현해보는 것입니다.
+     (다른 전략들은 대부분 알기 쉽게 바꾸는 것과는 반대로)
 7. 문제를 분해할 수 있을까?
+   - 주어진 제약조건이 복잡하면 다루기 쉽게 분해해 봅시다.
+   - 복잡한 조건 1개를 다루기 쉽게 단순한 여러개의 조건으로 바꾸는 것입니다.
+   - 예제
+     - 
    - 연습문제) 위상정렬 28장
      ![](images/3.jpg)
 8. 뒤에서부터 생각해서 문제를 풀 수 있을까?
-   - 연습문제) 삽입 정렬 뒤집기 22장, 감시카메라 설치 28장, Sorting Game 29장
+   - 문제를 풀다보면 어떤 순서를 내포하는 것들이 있습니다.
+   - 해결방법이 떠오르지 않을 때는 그 순서를 뒤집어 보면 어떨까요?
+   - 예를 들어, 사다리타기에서 원하는 목적지를 찾아내는 가장 빠른 방법은 거꾸로 올라가는 것입니다.
 9. 순서를 강제화 할 수 있을까?
-   - 연습문제) 게임판 덮기 6장, 폴리오미노 8장, 웨브바짐 9장
-     ![](images/4.jpg)
+   - 8번의 연장선에 있습니다. 이번에는 순서를 강제로 만들어 봅시다.
+   - 예제
+     - 5 x 5 격자의 모든 칸에 불을 켜는 최소클릭수 찾기
+       - 켜진상태 : 하얀색, 꺼진상태 : 검은색
+       - 어떤 칸을 클릭하면 상태가 반대로 바뀌는데, 이 때 상하좌우 4개 칸도 같이 반대로 바뀜
+       - 즉, 아래 그림에서 2.3(a)의 가운데 칸을 클릭하면 2.3(b)처럼 변함
+         ![](images/4.jpg)
+     - 해결방법
+       - 처음방법
+         - idea
+           - 어떤 순서로 칸들을 클릭하든 상관이 없습니다.
+             ![](images/4.jpg)
+           - 한 칸을 두 번 이상 클릭할 필요가 없습니다. (?)
+         - 위와 같은 이유로 각 칸을 클릭할지 말지만 고민하면 됩니다.
+         - 경우의 수는 : 2 ^ 25 = ‭33,554,432‬개 (5 x 5 격자이므로)
+       - 개선
+         - idea : 순서를 일부러 강제화 해보기
+           ※ 순서는 결과에 영향을 주지 않음을 알고 있으므로
+         - 항상 왼쪽 위에서부터 순서대로 클릭한다고 강제화 하면 어떻게 될까요?
+           - 
+           - c는 클릭하면 안됩니다. 그려면 a가 꺼지게 되고 다시는 켤 수 없기 때문입니다.
+           - d는 클릭해야 합니다. 안 그러면 b는 영영 켜지지 않기 때문입니다.
+         - 규칙이 만들어 졌습니다. 
+           - 맨 위에 있는 줄만 정하면 그 다음 줄들은 고정된 답을 가진다는 것입니다.
+           - 결국 경우의 수가 : 2 ^ 5 = 32개로 줄어들었습니다.
+       - 회고
+         - 순서를 강제화함으로써 처음방법 대비 경우의 수를 100만배 감소시킬 수 있었습니다.
+           33,554,432 / 32 = 1,048,576 (약 100만)
+         - 모두 불을 켜는데 실패할 수도 있음을 주지해야 합니다.
 10. 특정 형태의 답만 고려할 수 있을까? (정규화)
-    - 연습문제) 소풍 6장, 단어 제한 끝말잇기 28장
-      ![](images/5.jpg)
-      ![](images/6.jpg)
+    - 이 전략은 순서를 강제화하는 전략의 연장선에 있습니다.
+    - 예제
+      - 아래 그림에서 실선으로 표시된 원 A를 통해서 점선으로 표시된 원을 모두 덮을 수 있을까요?
+        ![](images/5.jpg)
+        ![](images/6.jpg)
 
 # 3장. 코딩과 디버깅에 관하여
 
@@ -332,6 +417,7 @@
 자주하는 실수 12가지
 
 1. 산술 오버플로우
+   
    - 중요해서 3.5에서 따로 다룸
 2. 배열 범위 밖 원소에 접근
 
@@ -586,7 +672,7 @@
     - 규칙2: 양쪽이 정수형이거나 양쪽이 실수형 - 보다 넓은 범위를 갖는 자료형으로 변환
     - 규칙3: 양쪽이 int형보다 작은 정수형인 경우 - 둘 다 int형으로 변환됨
     - 규칙4: 부호 없는 정수형과 부호 있는 정수형이 섞여 있는 경우 - 부호 없는 정수형으로 변환됨
-    
+  
 - 예를 들어 아래와 같은 수식의 결과는 어떻게 될까요?
   
     ```c++
